; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/mtd/extr_inftlcore.c_inftl_read_oob.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/mtd/extr_inftlcore.c_inftl_read_oob.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mtd_info = type { i32, i32 (%struct.mtd_info*, i32, %struct.mtd_oob_ops*)* }
%struct.mtd_oob_ops = type { i32, i64, i64, i32*, i32*, i32 }

@MTD_OOB_PLACE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @inftl_read_oob(%struct.mtd_info* %0, i32 %1, i64 %2, i64* %3, i32* %4) #0 {
  %6 = alloca %struct.mtd_info*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i64*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca %struct.mtd_oob_ops, align 8
  %12 = alloca i32, align 4
  store %struct.mtd_info* %0, %struct.mtd_info** %6, align 8
  store i32 %1, i32* %7, align 4
  store i64 %2, i64* %8, align 8
  store i64* %3, i64** %9, align 8
  store i32* %4, i32** %10, align 8
  %13 = load i32, i32* @MTD_OOB_PLACE, align 4
  %14 = getelementptr inbounds %struct.mtd_oob_ops, %struct.mtd_oob_ops* %11, i32 0, i32 5
  store i32 %13, i32* %14, align 8
  %15 = load i32, i32* %7, align 4
  %16 = load %struct.mtd_info*, %struct.mtd_info** %6, align 8
  %17 = getelementptr inbounds %struct.mtd_info, %struct.mtd_info* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = sub nsw i32 %18, 1
  %20 = and i32 %15, %19
  %21 = getelementptr inbounds %struct.mtd_oob_ops, %struct.mtd_oob_ops* %11, i32 0, i32 0
  store i32 %20, i32* %21, align 8
  %22 = load i64, i64* %8, align 8
  %23 = getelementptr inbounds %struct.mtd_oob_ops, %struct.mtd_oob_ops* %11, i32 0, i32 1
  store i64 %22, i64* %23, align 8
  %24 = load i32*, i32** %10, align 8
  %25 = getelementptr inbounds %struct.mtd_oob_ops, %struct.mtd_oob_ops* %11, i32 0, i32 4
  store i32* %24, i32** %25, align 8
  %26 = getelementptr inbounds %struct.mtd_oob_ops, %struct.mtd_oob_ops* %11, i32 0, i32 3
  store i32* null, i32** %26, align 8
  %27 = load %struct.mtd_info*, %struct.mtd_info** %6, align 8
  %28 = getelementptr inbounds %struct.mtd_info, %struct.mtd_info* %27, i32 0, i32 1
  %29 = load i32 (%struct.mtd_info*, i32, %struct.mtd_oob_ops*)*, i32 (%struct.mtd_info*, i32, %struct.mtd_oob_ops*)** %28, align 8
  %30 = load %struct.mtd_info*, %struct.mtd_info** %6, align 8
  %31 = load i32, i32* %7, align 4
  %32 = load %struct.mtd_info*, %struct.mtd_info** %6, align 8
  %33 = getelementptr inbounds %struct.mtd_info, %struct.mtd_info* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 8
  %35 = sub nsw i32 %34, 1
  %36 = xor i32 %35, -1
  %37 = and i32 %31, %36
  %38 = call i32 %29(%struct.mtd_info* %30, i32 %37, %struct.mtd_oob_ops* %11)
  store i32 %38, i32* %12, align 4
  %39 = getelementptr inbounds %struct.mtd_oob_ops, %struct.mtd_oob_ops* %11, i32 0, i32 2
  %40 = load i64, i64* %39, align 8
  %41 = load i64*, i64** %9, align 8
  store i64 %40, i64* %41, align 8
  %42 = load i32, i32* %12, align 4
  ret i32 %42
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
